--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
-# No need to modify this property unless customizing JavaFX Ant task infrastructure
-endorsed.javafx.ant.classpath=.
-javafx.run.inbrowser=<Default System Browser>
-javafx.run.inbrowser.path=F:\\PhpStorm 2018.1.4\\bin\\phpstorm64.exe
+compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\ID\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
