--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=JavaFXApplication1
+application.title=Diction
 application.vendor=ID
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -16,29 +15,45 @@ build.generated.sources.dir=${build.dir}/generated-sources
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
-compile.on.save=true
-compile.on.save.unsupported.javafx=true
 # Uncomment to specify the preferred debugger connection transport:
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
+# Files in build.classes.dir which should be excluded from distribution jar
+dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaFXApplication1.jar
+dist.jar=${dist.dir}/Diction.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.cmu_time_awb.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\cmu_time_awb.jar
+file.reference.cmu_us_kal.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\cmu_us_kal.jar
+file.reference.cmudict04.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\cmudict04.jar
+file.reference.cmulex.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\cmulex.jar
+file.reference.cmutimelex.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\cmutimelex.jar
+file.reference.en_us.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\en_us.jar
+file.reference.freetts-jsapi10.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\freetts-jsapi10.jar
+file.reference.freetts.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\freetts.jar
+file.reference.mbrola.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\mbrola.jar
 includes=**
-# Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
-jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${file.reference.cmu_time_awb.jar}:\
+    ${file.reference.cmu_us_kal.jar}:\
+    ${file.reference.cmudict04.jar}:\
+    ${file.reference.cmulex.jar}:\
+    ${file.reference.cmutimelex.jar}:\
+    ${file.reference.en_us.jar}:\
+    ${file.reference.freetts-jsapi10.jar}:\
+    ${file.reference.freetts.jar}:\
+    ${file.reference.mbrola.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -59,52 +74,18 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-javafx.application.implementation.version=1.0
-javafx.binarycss=false
-javafx.classpath.extension=\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
-javafx.deploy.allowoffline=true
-# If true, application update mode is set to 'background', if false, update mode is set to 'eager'
-javafx.deploy.backgroundupdate=false
-javafx.deploy.embedJNLP=true
-javafx.deploy.includeDT=true
-# Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
-javafx.disable.concurrent.runs=false
-# Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
-javafx.enable.concurrent.external.runs=false
-# This is a JavaFX project
-javafx.enabled=true
-javafx.fallback.class=com.javafx.main.NoJavaFXFallback
-# Main class for JavaFX
-javafx.main.class=javafxapplication1.JavaFXApplication1
-javafx.preloader.class=
-# This project does not use Preloader
-javafx.preloader.enabled=false
-javafx.preloader.jar.filename=
-javafx.preloader.jar.path=
-javafx.preloader.project.path=
-javafx.preloader.type=none
-# Set true for GlassFish only. Rebases manifest classpaths of JARs in lib dir. Not usable with signed JARs.
-javafx.rebase.libs=false
-javafx.run.height=600
-javafx.run.width=800
-# Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
-jnlp.enabled=false
-# Main class for Java launcher
-main.class=com.javafx.main.Main
-# For improved security specify narrower Codebase manifest attribute to prevent RIAs from being repurposed
-manifest.custom.codebase=*
-# Specify Permissions manifest attribute to override default (choices: sandbox, all-permissions)
-manifest.custom.permissions=
+main.class=Frame.frame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
-    ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
+# Space-separated list of JVM arguments used when running the project.
+# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
+# To set system properties for unit tests define test-sys-prop.name=value:
+run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
