--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Diction
 application.vendor=ID
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -42,9 +43,18 @@ file.reference.gtranslateapi-1.0.jar=File jar cho t\u1eeb \u0111i\u1ec3n\\gtrans
 file.reference.jl1.0.jar=File jar cho t\u1eeb \u0111i\u1ec3n\\jl1.0.jar
 file.reference.JTattoo-1.6.11.jar=C:\\Users\\ID\\Downloads\\JTattoo-1.6.11.jar
 file.reference.mbrola.jar=C:\\Users\\ID\\Downloads\\freetts-1.2\\lib\\mbrola.jar
+file.reference.mbrola.jar-1=C:\\Users\\ID\\Downloads\\freetts-1.2\\mbrola\\mbrola.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.gtranslateapi-1.0.jar}:\
+    ${file.reference.jl1.0.jar}:\
+    ${file.reference.com.google.api.translate-1.0.jar}:\
+    ${file.reference.mbrola.jar-1}:\
     ${file.reference.cmu_time_awb.jar}:\
     ${file.reference.cmu_us_kal.jar}:\
     ${file.reference.cmudict04.jar}:\
@@ -53,12 +63,7 @@ javac.classpath=\
     ${file.reference.en_us.jar}:\
     ${file.reference.freetts-jsapi10.jar}:\
     ${file.reference.freetts.jar}:\
-    ${file.reference.mbrola.jar}:\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.JTattoo-1.6.11.jar}:\
-    ${file.reference.gtranslateapi-1.0.jar}:\
-    ${file.reference.jl1.0.jar}:\
-    ${file.reference.com.google.api.translate-1.0.jar}
+    ${file.reference.mbrola.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -83,7 +88,24 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=Frame.mainFrame
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
